# Awesome-Client-Server-FileSearch

./: README.md
Client/: CMakeCache.txt  CMakeLists.txt  Client.cpp  Client.h  Makefile  SearchFile.cpp  SearchFile.h  SearchFile_L.cpp  SearchFile_L.h  SourceC.cpp  client
Server/: CMakeLists.txt  Makefile  Server.cpp  Server.h  SourceS.cpp  server
